added sonar project properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.verbose=true
-sonar.organization=robuzz-key
-sonar.projectKey=robuzz-key_twittertrend
+sonar.organization=robunk
+sonar.projectKey=robunk-key_twittertrend
 sonar.projectName=twittertrend
 sonar.language=java
 sonar.sourceEncoding=UTF-8
