--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,5 @@
-# sonar.verbose=true
-# sonar.organization=robunk
-# sonar.projectKey=robunk-key_twittertrend
-# sonar.projectName=twittertrend
-# sonar.language=java
-# sonar.sourceEncoding=UTF-8
-# sonar.sources=.
-# sonar.java.binaries=target/classes
-# sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.verbose=true
+sonar.organization=robunk-key
 sonar.projectKey=robunk-key_twittertrend
 sonar.projectName=twittertrend
 sonar.language=java
