added kubernetes manifest files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
-sonar.organization=robunk-key
-sonar.projectKey=robunk-key_twittertrend
-sonar.projectName=twittertrend
+sonar.organization=zuckem-key
+sonar.projectKey=zuckem-key_zuckem
+sonar.projectName=zuckem
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
